--- a/static/styles/404.css
+++ b/static/styles/404.css
@@ -1,42 +1,42 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Inter', sans-serif;
-  }
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Inter", sans-serif;
+}
 
-  body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    text-align: center;
-    padding: 2rem;
-  }
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  text-align: center;
+  padding: 2rem;
+}
 
-  .container {
-    max-width: 500px;
-  }
+.container {
+  max-width: 500px;
+}
 
+.error-code {
+  font-size: 6rem;
+  font-weight: 700;
+  color: #007bff;
+}
+
+h1 {
+  font-size: 2rem;
+  margin-bottom: 1rem;
+}
+
+p {
+  font-size: 1rem;
+  margin-bottom: 2rem;
+  color: #555;
+}
+
+@media screen and (max-width: 600px) {
   .error-code {
-    font-size: 6rem;
-    font-weight: 700;
-    color: #007bff;
+    font-size: 4rem;
   }
-
-  h1 {
-    font-size: 2rem;
-    margin-bottom: 1rem;
-  }
-
-  p {
-    font-size: 1rem;
-    margin-bottom: 2rem;
-    color: #555;
-  }
-
-  @media screen and (max-width: 600px) {
-    .error-code {
-      font-size: 4rem;
-    }
-  }
+}
