--- a/static/styles/auth.css
+++ b/static/styles/auth.css
@@ -1,137 +1,136 @@
 /* auth views styles*/
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 .bloc-page {
-    display: flex;
-    width: 100%;
-    min-height: 100vh;
-    border-radius: 1rem;
+  display: flex;
+  width: 100%;
+  min-height: 100vh;
+  border-radius: 1rem;
 }
 
 aside {
-    min-height: 100%;
-    flex: 30% 0 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    padding: 2rem;
-    background-image: url('/images/girl-on-hill.jpg');
-    background-size: cover;
-    background-position: center;
-    color:rgb(235, 235, 236);
+  min-height: 100%;
+  flex: 30% 0 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 2rem;
+  background-image: url("/images/girl-on-hill.jpg");
+  background-size: cover;
+  background-position: center;
+  color: rgb(235, 235, 236);
 }
 
 .logo img {
-    height: 32px;
+  height: 32px;
 }
 
 #avis {
-    background-color: #00000065;
-    padding: 1rem;
-    border-radius: 1rem;
+  background-color: #00000065;
+  padding: 1rem;
+  border-radius: 1rem;
 }
 
-#avis blockquote{
-    margin-bottom: 1rem;
-    font-size: 1.2rem;
-    font-weight: bold;
+#avis blockquote {
+  margin-bottom: 1rem;
+  font-size: 1.2rem;
+  font-weight: bold;
 }
 
 #avis .name {
-    font-size: 0.9rem;
+  font-size: 0.9rem;
 }
 
 #avis .function {
-    font-size: 0.8rem;
-    font-style: italic;
+  font-size: 0.8rem;
+  font-style: italic;
 }
 
 .bloc-page main {
-    flex: auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
+  flex: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
 }
 
-
 @media screen and (max-width: 800px) {
-    .bloc-page aside #avis {
-        display: none;
-    }
-    .bloc-page {
-        flex-direction: column;
-    }
+  .bloc-page aside #avis {
+    display: none;
+  }
+  .bloc-page {
+    flex-direction: column;
+  }
 }
 /* register */
 main .container {
-    width: 100%;
-    max-width: 500px;
+  width: 100%;
+  max-width: 500px;
 }
 main .container h1 {
-    text-align: center;
-    margin-bottom: 0.5rem;
+  text-align: center;
+  margin-bottom: 0.5rem;
 }
 main .container h2 {
-    text-align: center;
-    font-weight: normal;
-    font-size: 1rem;
-    color: #777;
-    margin-bottom: 1.5rem;
+  text-align: center;
+  font-weight: normal;
+  font-size: 1rem;
+  color: #777;
+  margin-bottom: 1.5rem;
 }
 
 main .container form {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    margin-bottom: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin-bottom: 1rem;
 }
 
 .input-field {
-    position: relative;
+  position: relative;
 }
 
 .input-field input {
-    width: 100%;
-    padding: 1.25rem 0.5rem 0.25rem;
-    font-size: 1rem;
-    border-radius: 0.25rem;
-    border: #777 solid 1px;
+  width: 100%;
+  padding: 1.25rem 0.5rem 0.25rem;
+  font-size: 1rem;
+  border-radius: 0.25rem;
+  border: #777 solid 1px;
 }
 
 .input-field label {
-    position: absolute;
-    left: 5px;
-    top: 5px;
-    font-size: 0.8rem;
-    color: #777;
+  position: absolute;
+  left: 5px;
+  top: 5px;
+  font-size: 0.8rem;
+  color: #777;
 }
 
 .radio-set {
-    display: flex;
-    justify-content: space-around;
-    padding: 1rem;
-    font-size: 0.9rem;
-    border-radius: 0.25rem;
+  display: flex;
+  justify-content: space-around;
+  padding: 1rem;
+  font-size: 0.9rem;
+  border-radius: 0.25rem;
 }
 
 .input-field .error {
-    color: red;
-    font-size: 0.8rem;
-    margin: 0.25rem 0;
+  color: red;
+  font-size: 0.8rem;
+  margin: 0.25rem 0;
 }
 
 input[required] ~ label::after {
-    content: ' *';
-    color: red;
+  content: " *";
+  color: red;
 }
 
 form ~ p {
-    margin: 1rem;
-    font-size: 0.9rem;
+  margin: 1rem;
+  font-size: 0.9rem;
 }
