--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -1,10 +1,10 @@
 /* Import Google Font */
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap");
 
 *,
 *::after,
 *::before {
-  font-family: 'Inter', Arial, sans-serif;
+  font-family: "Inter", Arial, sans-serif;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -22,14 +22,13 @@
 
 /* Paragraphes */
 p {
-    font-size: 1.1rem;
-    margin-bottom: 1rem;
+  font-size: 1rem;
 }
 
 /* Liens */
 a {
-    color: #2980b9;
-    text-decoration: none;
+  color: #2980b9;
+  text-decoration: none;
 }
 
 body {
@@ -83,16 +82,14 @@ body {
 }
 
 .logo {
-    width: fit-content;
-    height: 48px;
+  width: fit-content;
+  height: 48px;
 }
 
 .logo img {
-    height: 100%;
+  height: 100%;
 }
 
 a.btn {
   text-decoration: none;
 }
-
-
